--- a/app/styles/sections/_ovini.scss
+++ b/app/styles/sections/_ovini.scss
@@ -54,6 +54,9 @@
   position: relative;
   margin: 0 auto;
   z-index: 200;
+  @include media($mobile) {
+      width: 100%;
+  }
 }
 .register-header {
   position: absolute;
@@ -103,11 +106,5 @@
   opacity: 0;
   .date {
     font-size: 24px;
-  }
-}
-
-@include iphone6 {
-  .ovini-animation {
-    width: 100%;
   }
 }
