--- a/app/styles/sections/_organizers.scss
+++ b/app/styles/sections/_organizers.scss
@@ -15,6 +15,9 @@
     right: 50px;
     top: 200px;
     display: block;
+    @include media($mobile) {
+        display: none;
+    }
   }
 
   .section-title {
@@ -65,7 +68,7 @@
       position: relative;
       height: 43px;
       width: 70%;
-      margin: 0 auto;      
+      margin: 0 auto;
       >li {
         @include omega(3n);
       }
@@ -82,7 +85,7 @@
       margin-right: 5.42297%;
       margin-bottom: 5.42297%;
       width: 29.432772%;
-      
+
 
     }
 
@@ -99,7 +102,7 @@
           object-fit: cover;
           height: 160px;
         }
-        
+
         .name {
           // background: #ccc;
           float: right;
@@ -148,6 +151,6 @@
   a {
     color: #f2c600;
     font-size: 14px;
-    text-transform: uppercase;    
+    text-transform: uppercase;
   }
 }
