Change class master-category

--- a/app/styles/sections/_sponsors.scss
+++ b/app/styles/sections/_sponsors.scss
@@ -43,7 +43,7 @@
 	}
 }
 
-.master-category {
+.category-oferecimento {
 	@include span-columns(12);
 	border-bottom: 2px solid $light-gray;
 	text-align: center;
