Fix break line - organizers-list

--- a/app/styles/sections/_organizers.scss
+++ b/app/styles/sections/_organizers.scss
@@ -48,7 +48,7 @@
     .name {
       font-size: 28px;
       color: #2c3e50;
-      padding: 10px 20px 0;
+      padding: 10px 33px 0 20px;
       display: inline-block;
       line-height: 28px;
       margin-bottom: 10px;
@@ -71,6 +71,7 @@
       margin: 0 auto;
       >li {
         @include omega(3n);
+        margin-bottom: 4px;
       }
     }
 
