--- a/app/styles/sections/_sponsors.scss
+++ b/app/styles/sections/_sponsors.scss
@@ -2,7 +2,7 @@
   position: relative;
   z-index: 300;
 }
-.sponsors-wrapper, 
+.sponsors-wrapper,
 .partners-wrapper  {
   @include outer-container;
 }
@@ -70,9 +70,10 @@
 	}
 
 	a {
-		border-right: 1px solid rgba($light-gray, .5);
+		// border-right: 1px solid rgba($light-gray, .5);
 		display: inline-block;
 		width: 100%;
+    padding: 0 20px;
 	}
 
 	&:last-child {
