--- a/app/styles/sections/_ovini.scss
+++ b/app/styles/sections/_ovini.scss
@@ -23,12 +23,14 @@
       left: 0;
     }
     .rocket1 {
-      left: 80px;
-      top: 80px;
+      left: -540px;
+      top: -120px;
     }
     .rocket2 {
       left: 180px;
-      top: -107px
+      top: -107px;
+      -webkit-transform: rotate(-113deg); /* Chrome, Safari, Opera */
+      transform: rotate(-113deg);
     }
     .rocket3 {
       left: -40px;
