--- a/app/styles/sections/_lightningtalks.scss
+++ b/app/styles/sections/_lightningtalks.scss
@@ -151,7 +151,7 @@
   @include span-columns(12);
   font-size: 13px;
   padding-top: 0;
-  margin-top: 90px;
+  margin-top: 37px;
   text-align: center;
   @include media($mobile) {
       @include span-columns(5);
@@ -159,6 +159,23 @@
       color: $white;
       margin-top: 45px;
   }
+}
+
+.see-more-lts {
+  background-color: #1abc9c;
+  text-decoration: none;
+  transition: 300ms;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: bold;
+  display: inline-block;
+  width: 70%;
+  text-align: center;
+  margin-top: 30px;
+  height: 52px;
+  line-height: 52px;
+  margin-bottom: 110px;
 }
 
 
